<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pwr.edu.mytaskmanager.ui.create.CreateTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.profile.EditInfoFragment"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:contentDescription="@string/app_name"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_ellisse_bck" />

        <ImageView
            android:id="@+id/task_avatar"
            typeOfTask="@{viewModel.type}"
            android:layout_width="@dimen/icon_dimensions"
            android:layout_height="@dimen/icon_dimensions"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_email_black_24dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background">

            <TextView
                android:id="@+id/title_label"
                style="@style/profile_edit_label_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_slab"
                    android:hint="@string/title_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@={viewModel.title}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/description_label"
                style="@style/profile_edit_label_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_text"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@={viewModel.description}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/date_label"
                style="@style/profile_edit_label_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/date_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/date_hint"
                android:onClick="@{() -> viewModel.onDateEvent()}"
                android:text="@{viewModel.date.toGMTString()}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toStartOf="@+id/type_picker"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_label" />

            <!--                <com.google.android.material.textfield.TextInputEditText-->
            <!--                    android:id="@+id/date_picker_input"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:inputType="date"-->
            <!--                    android:paddingStart="16dp"-->
            <!--                    android:paddingEnd="16dp"-->
            <!--                    android:onClick="@{() -> viewModel.onDateEvent()}"-->
            <!--                    android:text="@{viewModel.date.toString()}" />-->

            <TextView
                android:id="@+id/type_label"
                style="@style/profile_edit_label_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_type"
                app:layout_constraintStart_toEndOf="@+id/date_label"
                app:layout_constraintStart_toStartOf="@+id/type_picker"
                app:layout_constraintTop_toBottomOf="@+id/description_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/type_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/type_hint"
                android:onClick="@{() -> viewModel.onTypeEvent()}"
                android:text="@{viewModel.type.toString()}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/date_picker"
                app:layout_constraintTop_toBottomOf="@+id/type_label" />

            <!--                <com.google.android.material.textfield.TextInputEditText-->
            <!--                    android:id="@+id/type_picker_input"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:hint="@string/type_hint"-->
            <!--                    android:inputType="textPassword"-->
            <!--                    android:onClick="@{() -> viewModel.onTypeEvent()}"-->
            <!--                    android:paddingStart="16dp"-->
            <!--                    android:paddingEnd="16dp"-->
            <!--                    android:text="@{viewModel.type.toString()}" />-->

            <Button
                android:id="@+id/edit_info_conferm"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="true"
                android:onClick="@{() -> viewModel.storeTheTask()}"
                android:text="@string/conferma"
                android:textAppearance="@style/button_style"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type_picker"
                app:layout_constraintVertical_bias="0.17000002" />

            <Button
                android:id="@+id/edit_info_cancel"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorAccent"
                android:onClick="@{() -> viewModel.onCancelTask()}"
                android:text="@android:string/cancel"
                android:textAppearance="@style/button_style"
                app:layout_constraintEnd_toEndOf="@+id/edit_info_conferm"
                app:layout_constraintStart_toStartOf="@+id/edit_info_conferm"
                app:layout_constraintTop_toBottomOf="@+id/edit_info_conferm" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>