<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.unito.di.taass.ui.user.news.detailed.DetailedNewsViewModel">

    <data>
        <variable
            name="viewModel"
            type="pwr.edu.mytaskmanager.ui.details.DetailsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/det_task_type_img"
                        typeOfTask="@{viewModel.task.typeOfTask}"
                        android:layout_width="@dimen/icon_dimensions"
                        android:layout_height="@dimen/icon_dimensions"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/app_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_launcher_background" />

                    <TextView
                        android:id="@+id/det_task_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:gravity="center_horizontal|top"
                        android:lineSpacingExtra="0sp"
                        android:text="@{viewModel.task.title}"
                        android:textSize="24sp"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/det_task_type_img"
                        tools:text="Very long Title" />

                    <TextView
                        android:id="@+id/det_task_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@{viewModel.task.dueTueDate.toGMTString()}"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@+id/det_task_title"
                        app:layout_constraintStart_toStartOf="@+id/det_task_title"
                        app:layout_constraintTop_toBottomOf="@+id/det_task_title"
                        tools:text="Titolo del progetto" />

                    <TextView
                        android:id="@+id/det_task_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:padding="6sp"
                        android:text="@{viewModel.task.description}"
                        android:textSize="16sp"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/det_task_date"
                        tools:text="@string/lorem_ipsum" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/det_task_remove_task"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:onClick="@{() -> viewModel.onRemoveTask()}"
                        android:text="@string/remove_task_bt"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>